[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.5.0.post4",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.2.11",
    "mcp[cli]>=1.4.1",
    "playwright>=1.50.0",
    "tavily-python>=0.5.1",
]
